# OmniliumKnox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.h.in  OmniliumKnox.sln  README.md  SECURITY.md  azure-build.ps1  azure-pipelines.yml  ci-build.ps1  generate-vssln.ps1  sonar-build.ps1  sonar-project.properties  version.h  version.rc
.github/workflows/: cmake.yml
Console/: CMakeLists.txt  Console.cpp  Console.vcxproj
Console/Src/: Console.cpp
Core/: CMakeLists.txt  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  Logging.cpp  Logging.h  MappedFile.cpp  MappedFile.h  RAIITemplates.h  Utils.cpp  Utils.h  dllmain.cpp  framework.h
Core/Include/: Logging.h  MappedFile.h  RAIITemplates.h  Utils.h
Core/Src/: Core.cpp  Logging.cpp  MappedFile.cpp  RAIITemplates.cpp  Utils.cpp  dllmain.cpp
Core/private/: version.h
Knox/: CMakeLists.txt  app.rc
Knox/assets/: app.html
Knox/cmake/: App.cmake
Knox/include/: Knox.h  pch.h
Knox/src/: Knox.cpp  main.cpp
KnoxC/: CMakeLists.txt  app.rc
KnoxC/include/: pch.h
KnoxC/src/: KnoxC.cpp
cmake/: generate_version_rc.cmake
core/: CMakeLists.txt  Core.cpp  Core.h  Logging.cpp  Logging.h  RAIITemplates.cpp  RAIITemplates.h  Utils.cpp  Utils.h  dllmain.cpp
core/private/: pch.h  version.rc
knox/: CMakeLists.txt  Knox.cpp  Knox.h  app.rc  main.cpp
knox/assets/: app.html
knox/cmake/: App.cmake
knox/private/: Resources.h  pch.h  version.rc
knoxcli/: CMakeLists.txt  KnoxCLI.cpp  app.rc
